adicionado a biblioteca Tailwind

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Kali Informática</h1>
+        <h1 class="text-3xl font-bold underline">Kali Informática</h1>
         <h2>A MELHOR Loja de Informática da Cidade </h2>
         <p>
             Manutenção e venda e Computadores, Notebooks e Acessórios
